// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Button ButtonGroup 1`] = `
.c0 > button:not(:last-child) {
  margin-right: 5px;
}

.c0 > button {
  display: inline-block;
}

.c1 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  background: #D8E3F6;
}

.c1:active {
  background: #C4D2EB;
}

.c1[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<div
  className="c0"
>
  <button
    className="Vital_Button c1"
    onClick={[Function]}
    selected={false}
    size="medium"
  >
    Button
  </button>
  <button
    className="Vital_Button c1"
    onClick={[Function]}
    selected={false}
    size="medium"
  >
    Button
  </button>
  <button
    className="Vital_Button c1"
    onClick={[Function]}
    selected={false}
    size="medium"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Components | Button Circular style 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border-radius: 100%;
  width: 2.066rem;
  line-height: 2.066rem;
  height: 2.066rem;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  <svg
    height={16}
    onClick={[Function]}
    viewBox="0 0 804.5714285714286 1024"
    width={16}
  >
    <path
      d="M804.571 420.571v109.714c0 30.286-24.571 54.857-54.857 54.857h-237.714v237.714c0 30.286-24.571 54.857-54.857 54.857h-109.714c-30.286 0-54.857-24.571-54.857-54.857v-237.714h-237.714c-30.286 0-54.857-24.571-54.857-54.857v-109.714c0-30.286 24.571-54.857 54.857-54.857h237.714v-237.714c0-30.286 24.571-54.857 54.857-54.857h109.714c30.286 0 54.857 24.571 54.857 54.857v237.714h237.714c30.286 0 54.857 24.571 54.857 54.857z"
      fill="#3b5998"
    />
  </svg>
</button>
`;

exports[`Storyshots Components | Button Default 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Default Button
</button>
`;

exports[`Storyshots Components | Button Disable 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  disabled={true}
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Disable Button
</button>
`;

exports[`Storyshots Components | Button Flat 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #EEF2FC;
  color: #456297;
  border-color: #EEF2FC;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0:hover {
  background: #D8E3F6;
  border-color: #D8E3F6;
}

.c0:active {
  background: #95ACD4;
  border-color: #95ACD4;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Flat Button
</button>
`;

exports[`Storyshots Components | Button Light 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #ffffff;
  color: #456297;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0:hover {
  background: #D8E3F6;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Light Button
</button>
`;

exports[`Storyshots Components | Button Link 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0:hover {
  background: transparent;
  color: #41a0fe;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Link Button
</button>
`;

exports[`Storyshots Components | Button Subtle 1`] = `
.c0 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #456297;
  border: 1px solid transparent;
}

.c0:hover {
  background: #D8E3F6;
}

.c0:active {
  background: #C4D2EB;
}

.c0:hover {
  background: #D8E3F6;
}

.c0[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

<button
  className="Vital_Button c0"
  onClick={[Function]}
  selected={false}
  size="medium"
>
  Subtle Button
</button>
`;
